# kelivo

./: .gitignore  AGENTS.md  README.md  pubspec.yaml  spec-kit.md
android/app/: build.gradle.kts
docs/: rust_frb_build.md
docs/perf/: markdown_sanitizer.md
docs/progress/: markdown_media_sanitizer.md
integration_test/: rust_greet_test.dart  simple_test.dart
lib/: main.dart
lib/config/: feature_flags.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  mock_api.dart
lib/utils/: markdown_media_sanitizer.dart
linux/flutter/: generated_plugins.cmake
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: backup.rs  document_parser.rs  google_auth.rs  markdown_sanitizer.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_Kelivo.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_Kelivo.podspec
rust_builder/windows/: CMakeLists.txt
spec/document-extractor-rust-migration/: design.md  requirements.md  tasks.md
spec/frb-rust-integration/: design.md  requirements.md  tasks.md
spec/google-auth-rust-migration/: design.md  requirements.md  tasks.md
spec/markdown-media-sanitizer-rust-migration/: design.md  requirements.md  tasks.md
templates/: design_template.md  requirements_template.md  tasks_template.md
test/: widget_test.dart
test/benchmark/: markdown_sanitizer_benchmark.dart
test/utils/: markdown_media_sanitizer_integration_test.dart
windows/flutter/: generated_plugins.cmake
(+11 files in other folders)
