[package]
name = "rust_lib_Kelivo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0"
lazy_static = "1.4.0"
regex = "1.5"
base64 = "0.13"
uuid = { version = "1.0", features = ["v5"] }
directories = "5.0"

[dev-dependencies]
tempfile = "3.10"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
