[package]
name = "rust_lib_Kelivo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0"
lazy_static = "1.4.0"
regex = "1.5"
base64 = "0.13"
pdf-extract = "0.7"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.31", features = ["encoding"] }
uuid = { version = "1.0", features = ["v5"] }
directories = "5.0"
jsonwebtoken = { version = "9.3", default-features = false, features = ["use_pem"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }

[dev-dependencies]
tempfile = "3.10"
serde_json = "1.0"
pdf-writer = "0.14"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
